--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="css/styles.css">
    </head>
 <body>
-
+    <footer>
+        © ACME 2020 All rights reserved
+    </footer>
 </body>
 </html>
