--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" href="css/styles.css">
    </head>
 <body>
+    <header>
+        ACME
+        <nav>
+            <span>Home</span>
+            <span>Contact</span>
+        </nav>
+    </header>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, labore.</p>
     <footer>
         © ACME 2020 All rights reserved
     </footer>
