--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="css/styles.css">
    </head>
 <body>
+    <!-- Creo un elemento header -->
+    <header>
+        ACME
+    </header>
     <footer>
         © ACME 2020 All rights reserved
     </footer>
