tr paragraph update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, labore.</p>
     <p>Párrafo con un pull request</p>
-    <p>Segúndo párrafo</p>
+    <p>Tercer párrafo</p>
     <footer>
         © ACME 2020 All rights reserved
     </footer>
